--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           })
           .then(item=> {
             $('ul').append(`<li>${item.name}</li>`)
+            $('input').val("")
           })
         })
       })
